[package]
name = "acp-p2p"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
libp2p = { version = "=0.52.4", features = ["tcp", "noise", "yamux", "mdns", "identify", "gossipsub", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "=4.4.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
idna_adapter = "=1.1.0"
spdx = "=0.10.8"
prost-derive = "=0.11.9"
prost = "=0.11.9"
wit-bindgen = "=0.16.0"
hickory-resolver = ">=0.24.0, <0.24.3"
hickory-proto = ">=0.24.0, <0.24.3"
ed25519-dalek = "=2.0.0"
unicode-segmentation = "=1.10.1"
multihash = "=0.19.5"
